# iced_solstice

./: Cargo.toml
src/: backend.rs  lib.rs  program.rs  quad.rs  text.rs  triangle.rs  widget.rs
src/shader/: quad.glsl  triangle.glsl
src/widget/: button.rs  checkbox.rs  container.rs  pane_grid.rs  pick_list.rs  progress_bar.rs  rule.rs  scrollable.rs  slider.rs  text_input.rs
src/window/: compositor.rs
