[package]
name = "iced_solstice"
version = "0.2.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"
license = "MIT"
description = "A solstice renderer for iced"
resolver = "2"

[features]
canvas = ["iced_graphics/canvas"]
qr_code = ["iced_graphics/qr_code"]
default_system_font = ["iced_graphics/font-source"]
# Not supported yet!
image = []
svg = []

[dependencies]
solstice = { version = "0.1", features = ["derive"] }
solstice_glyph = "0.1"
glyph_brush = "0.7"
euclid = "0.22"
bytemuck = "1.7"
log = "0.4"

[dependencies.iced_native]
version = "0.5"

[dependencies.iced_graphics]
version = "0.3"
features = ["font-fallback", "font-icons", "opengl"]
